tests/diagnostics/catalog/snapshots/ir/IR0066.snap
error[IR0066]: IR_E_USE_AFTER_DROP
 --> tests/diagnostics/catalog/sources/ir/IR0066.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0066
  = help: keep IR validation diagnostics structured and catalog-backed
